@@ -8,8 +8,8 @@ import lms.domain.User;
 import lms.domain.UserRepository;
 
 /**
- * Service class for managing user accounts, fines, and borrowing permissions.
- * Author: Ahmad Salameh
+ * Application-level logic for managing user financial accounts. Clean,
+ * validated, and aligned with the LMS architecture.
  */
 public class AccountService {
 
@@ -21,69 +21,71 @@ public class AccountService {
 		this.userRepo = userRepo;
 	}
 
-	public Account getOrCreateAccount(UUID userId) {
+	/** Fetches a user by ID or throws a clean exception */
+	private User getUserOrThrow(UUID userId) {
 		if (userId == null)
 			throw new IllegalArgumentException("User ID cannot be null");
 
-		User user = userRepo.getByID(userId)
+		return userRepo.getByID(userId)
 				.orElseThrow(() -> new IllegalArgumentException("User with ID " + userId + " does not exist."));
-		return user.getAccount();
+	}
+
+	/** Returns the user's account safely */
+	private Account getAccount(UUID userId) {
+		return getUserOrThrow(userId).getAccount();
+	}
+
+	public AccountStatus getUserAccountStatus(UUID userId) {
+		return getAccount(userId).getStatus();
+	}
+
+	public double getUserBalance(UUID userId) {
+		return getAccount(userId).getBalance();
+	}
+
+	public boolean canUserBorrow(UUID userId) {
+		return getAccount(userId).canBorrow();
 	}
 
 	public void addFineToUser(UUID userId, double amount, String reason) {
-		Account account = getOrCreateAccount(userId);
-		account.addFine(amount, reason);
+		if (amount <= 0)
+			throw new IllegalArgumentException("Fine amount must be positive");
 
-		User user = userRepo.getByID(userId)
-				.orElseThrow(() -> new IllegalStateException("User not found after account creation"));
+		User user = getUserOrThrow(userId);
+		user.getAccount().addFine(amount, reason);
 		userRepo.update(user);
 	}
 
 	public void payUserFine(UUID userId, double amount) {
-		Account account = getOrCreateAccount(userId);
-		account.payFine(amount);
+		if (amount <= 0)
+			throw new IllegalArgumentException("Payment amount must be positive");
 
-		User user = userRepo.getByID(userId)
-				.orElseThrow(() -> new IllegalStateException("User not found after account access"));
+		User user = getUserOrThrow(userId);
+		user.getAccount().payFine(amount);
 		userRepo.update(user);
 	}
 
-	public AccountStatus getUserAccountStatus(UUID userId) {
-		return getOrCreateAccount(userId).getStatus();
-	}
-
-	public boolean canUserBorrow(UUID userId) {
-		return getOrCreateAccount(userId).canBorrow();
-	}
-
-	public double getUserBalance(UUID userId) {
-		return getOrCreateAccount(userId).getBalance();
-	}
-
 	public void suspendUserAccount(UUID userId, String reason) {
-		if (reason == null || reason.trim().isEmpty())
-			throw new IllegalArgumentException("Suspension reason cannot be null or empty");
+		if (reason == null || reason.isBlank())
+			throw new IllegalArgumentException("Suspension reason cannot be empty");
 
-		Account account = getOrCreateAccount(userId);
-		account.suspendAccount(reason);
-
-		User user = userRepo.getByID(userId).orElseThrow(() -> new IllegalStateException("User not found"));
+		User user = getUserOrThrow(userId);
+		user.getAccount().suspendAccount(reason);
 		userRepo.update(user);
 	}
 
 	public void activateUserAccount(UUID userId) {
-		Account account = getOrCreateAccount(userId);
-		account.activateAccount();
-
-		User user = userRepo.getByID(userId).orElseThrow(() -> new IllegalStateException("User not found"));
+		User user = getUserOrThrow(userId);
+		user.getAccount().activateAccount();
 		userRepo.update(user);
 	}
 
+	/** Aggregation operations */
 	public double calculateTotalFinesForAllUsers() {
-		return userRepo.getAllUsers().stream().mapToDouble(user -> user.getAccount().getTotalFines()).sum();
+		return userRepo.getAllUsers().stream().mapToDouble(u -> u.getAccount().getTotalFines()).sum();
 	}
 
 	public int getUsersWithFinesCount() {
-		return (int) userRepo.getAllUsers().stream().filter(user -> user.getAccount().getTotalFines() > 0).count();
+		return (int) userRepo.getAllUsers().stream().filter(u -> u.getAccount().getTotalFines() > 0).count();
 	}
 }
